# pzzld-gateway

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Gateway.toml  LICENSE  README.md  SECURITY.md  Spacefile  flake.nix
.config/: default.config.toml
.github/: dependabot.yml
.github/workflows/: clippy.yml  docker.yml  rust-clippy.yml  rust.yml
gateway/: Cargo.toml  Dockerfile
gateway/src/: gateway.rs  lib.rs  states.rs
gateway/src/config/: mod.rs
gateway/src/core/: mod.rs  primitives.rs
gateway/src/core/gateways/: gateway.rs  mod.rs
gateway/src/gateways/: gateway.rs  mod.rs
gateway/src/gateways/config/: creds.rs  mod.rs  regions.rs
xtask/: Cargo.toml
xtask/src/cli/: commands.rs
