[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
categories = []
description = "scsys-gateway is a composable data-pool"
edition = "2021"
homepage = "https://github.com/Scattered-Systems/scsys-gateway/-/wikis/home"
keywords = []
license = "MIT"
name = "gateway"
readme = "README.md"
repository = "https://github.com/Scattered-Systems/scsys-gateway"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[[bin]]
bench = false
name = "gateway"

[dependencies]
axum = { features =["headers", "http2"], version = "0.6.0" }
http = "0.2.8"
rust-s3 = {features = ["with-tokio"], version = "0.32.3" }
scsys = { features = ["full"], version = "0.1.35" }
serde = { features = ["derive"], version = "1.0.148" }
serde_json = "1.0.89"
tokio = { features = ["full"], version = "1.22.0" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.4" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }
